change the UI & fix some bug

--- a/client/modules/auth/views/reset-password.html
+++ b/client/modules/auth/views/reset-password.html
@@ -2,7 +2,7 @@
     <div class="col">
         <form novalidate>
             <formly-form model="vm.resetPassword" fields="vm.resetPasswordFields" form="vm.resetPasswordForm">
-                <button type="submit" class="btn btn-default btn-login" ng-click="save()">Save</button>
+                <button type="submit" class="btn btn-success btn-login" ng-click="save()">Save</button>
             </formly-form>
         </form>
     </div>
