--- a/client/modules/generate-report/views/generate-report.html
+++ b/client/modules/generate-report/views/generate-report.html
@@ -15,8 +15,10 @@
         <div class="col-xs-12">
             <div class="box">
                 <div class="box-header">
+                     
                     <div class="form-inline" align="center">
-                        <button type="submit" class="btn btn-default" ng-click="generate()">Generate PDF report</button>
+                       
+                        <button type="submit" class="btn btn-success" ng-click="generate()">Generate PDF report</button>
                     </div>
                 </div>
             </div>
