--- a/client/modules/auth/views/forgot-password.html
+++ b/client/modules/auth/views/forgot-password.html
@@ -3,7 +3,7 @@
         <form novalidate>
             <label>Please input Email address to reset password</label>
             <formly-form model="vm.forgotPassword" fields="vm.forgotPasswordFields" form="vm.forgotPasswordForm">
-                <button type="submit" class="btn btn-default btn-login" ng-click="resetPassword()">Reset Password</button>
+                <button type="submit" class="btn btn-success btn-login" ng-click="resetPassword()">Reset Password</button>
                 <div align="center">
                     <a href="/#/login">Login</a>
                 </div>
