--- a/client/modules/auth/views/login.html
+++ b/client/modules/auth/views/login.html
@@ -2,7 +2,7 @@
     <div class="col">
         <form novalidate>
             <formly-form model="vm.login" fields="vm.loginFields" form="vm.loginForm">
-                <button type="submit" class="btn btn-default btn-login" ng-click="login()">Login</button>
+                <button type="submit" class="btn btn-success btn-login" ng-click="login()">Login</button>
                 <div align="center">
                     <a href="" ng-click="forgotPassword()">Forgot password?</a>
                 </div>
